--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ html {
 
 body {
 	overflow: hidden;
-	background: #E5E5E5;
+ background: #E5E5E5;
+ font-family: 'Dosis', sans-serif;
 }
 
 .all{
@@ -95,7 +96,7 @@ body {
 }
 
 .comp {
-	padding: 6px 0px;
+	padding: 6px 0px !important;
 }
 
 .status{
@@ -119,7 +120,8 @@ text-align: center;
 
 .in {
 	width: 95%;
-	margin: auto;
+ margin: auto;
+ padding: 5px;
 	display: flex;
 	justify-content: space-between;
 }
@@ -278,3 +280,186 @@ border-radius: 3px;
 	color: #909090;
 	margin-top: 10px;
 }
+
+
+/*=============
+===============
+==== VIEW=======
+================ */
+
+.back{
+ padding:10px 0;
+}
+.back h1{
+ font-weight: 600;
+font-size: 16px !important;
+line-height: 19px;
+color: #9D9D9D;
+margin: 0;
+}
+.showcase{
+ display: flex;
+ width: 95%;
+ margin: auto;
+ background: #FFFFFF;
+border: 1px solid #F0F0F0;
+box-sizing: border-box;
+box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.05);
+border-radius:15px;
+text-align: center;
+padding: 10px 20px;
+}
+.show-bar{
+ background: #FFFFFF;
+box-sizing: border-box;
+text-align: left;
+width: 20%;
+}
+.show-bar hr{
+ margin:10px 0;
+}
+.show-bar select{
+ display: block;
+ margin: 10px 0;
+ padding: 6px 6px;
+ width: 100%;
+}
+.show-bar li{
+ list-style: none;
+ width: 100%;
+ display: block;
+ margin:15px 0;
+ box-sizing: border-box;
+}
+.show-bar .assign{
+ font-weight: normal;
+font-size: 14px;
+line-height: 17px;
+color: #222222;
+border: 1px solid #F9E4CB;
+box-sizing: border-box;
+border-radius: 2px;
+text-align: center;
+width: 100%;
+padding: 10px 0px;
+box-sizing: border-box;
+text-decoration: none;
+cursor: pointer;
+}
+.show-bar h4{
+ font-size: 16px;
+line-height: 130%;
+color: #474747;
+font-weight: 600;
+display: block;
+}
+.show-menu{
+ background: #FFFFFF;
+box-sizing: border-box;
+width: 80%;
+}
+
+.show-menu .tab{
+ display: flex;
+ justify-content: space-between;
+ margin:5px 20px;
+}
+.tab img{
+ margin-right: 10px;
+}
+.tab h4{
+ font-weight: 600;
+font-size: 18px;
+line-height: 22px;
+color: #474747;
+margin: 0px 0 20px 0;
+}
+.tab .status{
+ width:90px;
+ height:23px;
+}
+.show-menu .line{
+ display: flex;
+ justify-content: space-between;
+ margin: 0;
+}
+.show-menu .line hr{
+ width: 40%;
+}
+.show-menu h5{
+ font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height:30px;
+color: #000000;
+}
+.show-menu .info{
+ font-weight: normal;
+font-size: 16px;
+line-height: 22px;
+text-align: left;
+color: #000000;
+width: 95%;
+margin: 0 auto;
+}
+
+.show-menu .line2{
+ display: flex;
+ justify-content: space-between;
+ margin: 0;
+}
+.show-menu .line2 hr{
+ width:22%;
+}
+.show-menu table{
+ width:50%;
+ margin:15px  auto 10px auto;
+}
+
+.show-menu .tile{
+ display: flex;
+ justify-content: space-between;
+ width:80%;
+ margin:  3px auto;
+}
+.show-menu .inner-text{
+ font-weight: normal;
+font-size: 16px;
+line-height: 22px;
+width: 80%;
+margin: 5px auto;
+text-align: left;
+color: #000000;
+}
+.show-menu input{
+ width:50%;
+height:35px;
+background: #F4F4F4;
+border: 1px solid #DBDBDB;
+box-sizing: border-box;
+border-radius: 40px 5px 5px 40px;
+margin-top: 15px;
+}
+
+.show-menu .input button{
+ font-size: 16px;
+line-height: 22px;
+color: #258066;
+background: #DEF7EB;
+border-radius: 5px;
+border: none;
+outline: none;
+margin-left: 20px;
+margin-top: 15px;
+height:35px;
+padding: 0 20px;
+}
+
+.show-menu .input .f2{
+ font-size: 16px;
+line-height: 22px;
+background: #FFDADA;
+border-radius: 5px;
+color: #EE1414;
+}
+
