--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,8 @@ body {
 	margin-right: 0;
 	top: 0px;
 	box-sizing: border-box;
-	overflow: auto;
+ overflow: auto;
+ margin-bottom:20px;
 }
 
 
@@ -308,6 +309,7 @@ box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.05);
 border-radius:15px;
 text-align: center;
 padding: 10px 20px;
+margin-bottom: 10px;
 }
 .show-bar{
  background: #FFFFFF;
